== Sat Sep 11 01:56:59 UTC 2010 Mikel Lindsaar <mikel@rubyx.com>

* Added new way to do versioning for rubygems
* Added additional specs for Content-Disposition: inline which are not being encoded correctly - Shawn Pyle
* Make sure Mail::Message#attachment? returns true/false - Simone Carletti
* Replace hard-coded references to Mail with more generic self references to allow easier inheritance (closes #61) - Simone Carletti
* Force encoding on Regexp for Ruby 1.9 to avoid encoding conflicts - Golubev Pavel
* Added lazy evaluation to message body: body is not parsed until need. It greatly improves performance with big mails if you don't need to read the body (yet)
* Added Mail.read_from_string as an explicit method (mcansky)
* Fixed bounce detection for multipart reports that contain a human readable report status part
* Closed Issue #65 found (incredibly) by quetz - major Kudos for bug hunting
* Fixed missing trailing CRLF in content type field - Closes issue #57 - Kudos to Henry Flower for finding it
* Version bump to 2.2.5.2

== Sat Sep 11 01:32:13 UTC 2010 Mikel Lindsaar <mikel@rubyx.com>

* Closed issue #58 - Content Type not parsing unless lower case.
* Version bump to 2.2.5.1

== Thu 17 Jun 2010 22:13:18 UTC Mikel Lindsaar <mikel@rubyx.com>

* Added Mail::POP3.delete_all, including specs (Martijn Storck)
* Lars Pind updates on header folding
* Version bump to 2.2.5

== Tue Jun  8 01:55:21 UTC 2010 Mikel Lindsaar <mikel@rubyx.com>

* Added inline attachment support to mail (mikel)

== Mon Jun  7 18:00:39 UTC 2010 Mikel Lindsaar <mikel@rubyx.com>

* Updating versioning so we only have one source, VERSION.yml (mikel)
* Changed activesupport dependency to 2.3.6 to fix #53, #64, and def #67. (Artem Titoulenko)
* Fixing typo in break_down_to.rb. (mikel)

== Mon Jun  7 18:07:16 UTC 2010 Mikel Lindsaar <mikel@rubyx.com>

* fixing a typo when generating docs. (Andrew Bloom)
* Changing \r\n\t to \r\n\s throughout mail (mikel)