@@ -1,0 +1,52 @@
+Return-path: <ak@g.com>
+Envelope-to: abuser@r.ru
+Delivery-date: Sat, 19 Sep 2009 21:41:40 +0400
+Received: from mail-fx0-f215.google.com ([209.85.220.215]:39047)
+	by mail.rg.com with esmtp 
+	id 1Mp3wA-0007kA-Ic
+	for <abuser@r.ru>; Sat, 19 Sep 2009 21:41:30 +0400
+Received: by fxm11 with SMTP id 11so1412272fxm.15
+        for <abuser@r.ru>; Sat, 19 Sep 2009 10:40:39 -0700 (PDT)
+DKIM-Signature: v=1; a=rsa-sha256; c=relaxed/relaxed;
+        d=gmail.com; s=gamma;
+        h=domainkey-signature:received:received:from:to:subject:date
+         :message-id:mime-version:content-type:x-priority:x-msmail-priority
+         :x-mailer:importance:x-mimeole:in-reply-to;
+        bh=U4LmZ2XrYxpE2gzziKYLSJXvmTsl0JSdrp4OYcIw2xw=;
+        b=N4ZFNsnhqgG0qILwgjv0Sh0qKgSR+A5hMn60yxtSlACUDq/xQ/52pJkCuMChX0Pzxo
+         HaRYdiAsxyzlzmSStwtM/fAHZSNrXD0pLpeQOCi1r8ZSyQ6mKb4WgO56FFNOjCA0rLl8
+         NOelymNmCIYTwuYz5Dd0PthnWL0YZPU+YUEHU=
+DomainKey-Signature: a=rsa-sha1; c=nofws;
+        d=gmail.com; s=gamma;
+        h=from:to:subject:date:message-id:mime-version:content-type
+         :x-priority:x-msmail-priority:x-mailer:importance:x-mimeole
+         :in-reply-to;
+        b=ZTs05s6OpCmZp0GWYqGIv8xGM+AmM7+QL6SdaR45KgwCcN8sJH0SB4PI4QMFSW3+ZX
+         IdYVUGjqer/bEz7POPS8FOTCZW1QTkRcTHqVEFezAmotlc0VfLVSnnW9oRpzJ/UFQUWM
+         +Wn0vcObiGmrUPUJWWiNgBvuRnrJHk+nICCQI=
+Received: by 10.86.240.9 with SMTP id n9mr2799028fgh.70.1253375382709;
+        Sat, 19 Sep 2009 08:49:42 -0700 (PDT)
+Return-Path: <ak@g.com>
+Received: from articondell (ppp85-140-104-88.pppoe.mtu-net.ru [85.140.104.88])
+        by mx.google.com with ESMTPS id e11sm2485072fga.21.2009.09.19.08.49.39
+        (version=SSLv3 cipher=RC4-MD5);
+        Sat, 19 Sep 2009 08:49:40 -0700 (PDT)
+From: "Andrey Kuznetsov" <ak@g.com>
+To: <abuser@r.ru>
+Subject: illegal copy of our patient education software 
+Date: Sat, 19 Sep 2009 19:49:36 +0400
+Message-ID: <F194F88AF3E341A6B2B135CC17912811@articondell>
+MIME-Version: 1.0
+Content-Type: multipart/related;
+	boundary="----=_NextPart_000_000A_01CA3962.51E52370"
+X-Priority: 3 (Normal)
+X-MSMail-Priority: Normal
+X-Mailer: Microsoft Outlook, Build 10.0.4024
+Importance: Normal
+X-MimeOLE: Produced By Microsoft MimeOLE V6.00.2900.5579
+In-Reply-To: 
+Recivied-SPF: (invalid) 
+RSpam-Score: 40
+List-Id:  abuser@rg.com Mailing List
+Reply-To: ak@g.com
+
