@@ -1,3 +1,7 @@
+== Sat 11 Sep 2010 05:13:36 UTC Mikel Lindsaar <mikel@rubyx.com>
+
+* Fixed parsing an email with an empty In-Reply-To header (Reported by Eugene Pimenov)
+
 == Sat Sep 11 01:56:59 UTC 2010 Mikel Lindsaar <mikel@rubyx.com>
 
 * Added new way to do versioning for rubygems
